<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="fetchHandler"
            type="com.rubenquadros.apitest.viewmodel.FetchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.FetchData">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/headingTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/product_sans_bold"
            android:gravity="center"
            android:text="@string/any_field"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/toolbar"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorBackground"
            app:cardBackgroundColor="@color/colorBackground"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/headingTv"
            app:layout_constraintTop_toBottomOf="@+id/headingTv">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="275dp">

                <EditText
                    android:id="@+id/fullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:afterTextChanged="@{fetchHandler::afterNameTextChanged}"
                    android:drawableStart="@drawable/ic_person_black_24dp"
                    android:fontFamily="@font/product_sans_regular"
                    android:hint="@string/name_hint"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:afterTextChanged="@{fetchHandler::afterEmailTextChanged}"
                    android:drawableStart="@drawable/ic_email_black_24dp"
                    android:fontFamily="@font/product_sans_regular"
                    android:hint="@string/email_hint"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:afterTextChanged="@{fetchHandler::afterNumberTextChanged}"
                    android:drawableStart="@drawable/ic_phone_android_black_24dp"
                    android:fontFamily="@font/product_sans_regular"
                    android:hint="@string/phone_hint"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:afterTextChanged="@{fetchHandler::afterUserNameTextChanged}"
                    android:drawableStart="@drawable/ic_person_outline_black_24dp"
                    android:fontFamily="@font/product_sans_regular"
                    android:hint="@string/username_hint"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/fetchButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:fontFamily="@font/product_sans_bold"
                    android:text="@string/fetch_data"
                    android:textSize="18sp"
                    android:textColor="@color/colorWhite"
                    android:onClick="@{fetchHandler::fetchButtonClicked}"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            android:visibility="gone"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/toolbar"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>